<resources>
    <string name="app_name">Taranom</string>
    <string name="app_name_fa">تَرَنُم</string>
    <string name="refresh">تازه‌سازی</string>
    <string name="copy">کپی</string>
    <string name="share">اشتراک‌گذاری</string>
    <string name="text_copied">متن کپی شد</string>
    <string name="dots">…</string>
    <string name="no_connection">اتصال دستگاه به اینترنت را بررسی نمایید</string>
    <string name="story">داستان</string>
    <string name="short_story">داستان_کوتاه</string>
    <string name="readPoetryInWeb"><u>مطالعه متن کامل…</u></string>
    <string name="knowledge">دانستنیها</string>
    <string name="randomPoetry">شعر تصادفی</string>
    <string name="about_us">درباره ما</string>
    <string name="help">راهنما</string>
    <string name="close">بستن</string>
    <string name="help_copy">با دوبار لمس متون می‌توانید از آنها کپی بگیرید.</string>
    <string name="bullet_point">•</string>
    <string name="require_internet">برای اجرای برنامه و دریافت محتوا، اتصال به اینترنت نیاز است.</string>
    <string name="version">%1$s %2$s %3$s</string>
    <string name="contact_us_email"><b> ارتباط با توسعه دهنده: app.roela@gmail.com</b></string>
    <string name="develop_by_roela_apps">طراحی و توسعه Roela Apps</string>
    <string name="used_api">منبع اطالاعات دریافتی :</string>
    <string name="codebazan_api">codebazan.ir</string>
    <string name="ganjoor_api">ganjoor.net</string>
    <string name="about_app">تَرَنُم برنامه ای برای یافتن محتوای ادبی و اشتراک گذاری آن</string>
    <string name="poetry_text">%1$s\n\u2748\u2748\u2748\n%2$s\n\n#%3$s</string>
    <string name="connecting">در حال اتصال</string>
    <string name="show_hashtag">کپی کردن شناسه های دلخواه زیر در انتهای شعر</string>
    <string name="setting">تنظیمات</string>
    <string name="sub_content_desc_setting">شناسه کانال یا صفحه خود را وارد کنید تا در هنگام اشتراک گذاری در انتهای متن کپی شده قرار گیرد.\n این قسمت می‌تواند شامل هشتگ های دلخواه ، شناسه ها یا شکلک های دلخواه شما باشد.(این قسمت فعلا برای اشتراک شعرها فعال است)</string>
    <string name="sub_content_desc_setting_help"><mark>•پس از انجام تغییرات کلید ذخیره را بزنید.</mark></string>
    <string name="sub_content_desc_setting_hint"><span>@your_channel_id\n#شعر\n🌹</span></string>
    <string name="save">ذخیره</string>
    <string name="saved">ذخیره شد</string>
    <string name="space"><span hidden="true">تَرَنُم</span></string>
    <string name="splash_subtitle">نوید عشق آید زان تَرَنُم</string>
</resources>