<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.roela.taranom.activity.PoemFragment"
        android:label="@string/randomPoetry"
        tools:layout="@layout/fragment_poem" />

    <fragment
        android:id="@+id/navigation_story"
        android:name="ir.roela.taranom.activity.StoryFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="ir.roela.taranom.activity.KnowledgeFragment"
        android:label="@string/knowledge"
        tools:layout="@layout/fragment_knowledge" />

</navigation>