<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/space"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name_fa"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_subtitle"
        android:textSize="21sp"
        android:textStyle="bold" />


</LinearLayout>