<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chk_show_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_hashtag" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/sub_content_desc_setting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/sub_content_desc_setting_help"
                android:textColor="@android:color/tertiary_text_dark" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSubContentDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:gravity="top"
                android:hint="@string/sub_content_desc_setting_hint"
                android:minHeight="120dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>