<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ltyRandomPoetry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progressLoadData"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtRandomPoetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dots"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPoetryLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtRandomPoetry"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/readPoetryInWeb"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRefreshData"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:drawableEnd="@drawable/ic_baseline_refresh_24"
                android:text="@string/refresh"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCopyPoetry"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:drawableEnd="@drawable/ic_baseline_content_copy_24"
                android:text="@string/copy"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSharePoetry"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:drawableEnd="@drawable/ic_baseline_share_24"
                android:text="@string/share"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>