<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.KnowledgeFragment">

    <RelativeLayout
        android:id="@+id/ltyRandomKnowledge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtRandomKnowledge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:justificationMode="inter_word"
                android:layoutDirection="rtl"
                android:lineSpacingExtra="12dp"
                android:text="@string/dots"
                android:textDirection="rtl"
                android:textSize="23sp"
                android:textStyle="bold" />

        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ltyRandomKnowledge">

        <Button
            android:id="@+id/btnRefreshKnowledge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableEnd="@drawable/ic_baseline_refresh_24"
            android:text="@string/refresh"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCopyKnowledge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableEnd="@drawable/ic_baseline_content_copy_24"
            android:text="@string/copy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnShareKnowledge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableEnd="@drawable/ic_baseline_share_24"
            android:text="@string/share"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>