<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/poem_card_bg">

    <LinearLayout
        android:id="@+id/ltyRandomPoetry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRandomPoetry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:layoutDirection="rtl"
                android:text="@string/dots"
                android:gravity="right"
                android:textDirection="rtl"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPoetryLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtRandomPoetry"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:selectableItemBackground"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/readPoetryInWeb"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:visibility="invisible"
                app:drawableEndCompat="@drawable/ic_link_16" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/content_bg_border"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btnCopyPoetry"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/copy"
                android:src="@drawable/ic_baseline_content_copy_24" />

            <ImageButton
                android:id="@+id/btnSharePoetry"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_baseline_share_24" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>